fixed h1 color and buy button visibility

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -15,10 +15,7 @@
   margin-left: 70px;
 }
 
-h1 {
-  font-size: 40px;
-  color: white;
-}
+
 
 
 .carousel-background {
