--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -19,6 +19,8 @@
 .artworks-banner-title {
   position: relative;
   margin-left: 50px;
+  font-size: 40px;
+  color: white;
 }
 
 .form-filter {
